--- a/Microsoft.Windows.Toolkit.Notifications.Shared/Microsoft.Windows.Toolkit.Notifications.nuspec
+++ b/Microsoft.Windows.Toolkit.Notifications.Shared/Microsoft.Windows.Toolkit.Notifications.nuspec
@@ -8,13 +8,13 @@
         <projectUrl>https://github.com/anbare/NotificationsExtensions/wiki</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <summary>Generate tile, toast, and badge notifications for Windows 10 via code, with the help of IntelliSense, instead of directly using XML.</summary>
-        <description>The official NotificationsExtensions library from Microsoft. Supports all UWP project types (C#, C++, and JavaScript). Also works with portable class libraries and non-UWP projects like server projects.
+        <description>The official NotificationsExtensions library from Microsoft. C# and C++ UWP project types (see NotificationsExtensions.Win10.JavaScript for the JS version). Also works with C# portable class libraries and non-UWP C# projects like server projects.
 
-    Generate tile, toast, and badge notifications for Windows 10 via code, with the help of IntelliSense, instead of directly using XML.
+Generate tile, toast, and badge notifications for Windows 10 via code, with the help of IntelliSense, instead of directly using XML.
 
-    Supports adaptive tiles and adaptive/interactive toasts for Windows 10!</description>
+Supports adaptive tiles and adaptive/interactive toasts for Windows 10!</description>
         <copyright>© Microsoft Corporation. All rights reserved.</copyright>
-        <tags>notifications, win10, windows 10, tile, tiles, toast, toasts, badge, xml, uwp</tags>
+        <tags>notifications, win10, windows 10, tile, tiles, toast, toasts, badge, xml, uwp, c#, csharp, c++</tags>
         <licenseUrl>https://raw.githubusercontent.com/anbare/NotificationsExtensions/master/LICENSE</licenseUrl>
     </metadata>
     
@@ -43,21 +43,8 @@
         <file src="..\Microsoft.Windows.Toolkit.Notifications.UWP\bin\Release\Microsoft.Windows.Toolkit.Notifications.pdb" target="lib\uap10.0"/>
         <file src="..\Microsoft.Windows.Toolkit.Notifications.UWP\bin\Release\Microsoft.Windows.Toolkit.Notifications.xml" target="lib\uap10.0"/>
 
-        <!--For WinJS UWP apps (hopefully both the uap10.0 and Windows won't be added on C# apps...)-->
-        <file src="..\Microsoft.Windows.Toolkit.Notifications.WinRT\bin\Release\Microsoft.Windows.Toolkit.Notifications.winmd" target="lib\Windows"/>
-        <file src="..\Microsoft.Windows.Toolkit.Notifications.WinRT\bin\Release\Microsoft.Windows.Toolkit.Notifications.pri" target="lib\Windows"/>
-        <file src="..\Microsoft.Windows.Toolkit.Notifications.WinRT\bin\Release\Microsoft.Windows.Toolkit.Notifications.pdb" target="lib\Windows"/>
-        <file src="..\Microsoft.Windows.Toolkit.Notifications.WinRT\bin\Release\Microsoft.Windows.Toolkit.Notifications.xml" target="lib\Windows"/>
-        <file src="..\Microsoft.Windows.Toolkit.Notifications.WinRT\bin\Release\Microsoft.Windows.Toolkit.Notifications.xml" target="lib\Windows\Microsoft.Windows.Toolkit.Notifications.winmd.xml"/>
-
         <!--For C++ UWP apps-->
         <file src="Microsoft.Windows.Toolkit.Notifications.native.targets" target="build\native\Microsoft.Windows.Toolkit.Notifications.targets"/>
-
-        <!--For C# UWP apps-->
-        <file src="Microsoft.Windows.Toolkit.Notifications.uap10.0.targets" target="build\uap10.0\Microsoft.Windows.Toolkit.Notifications.targets"/>
-
-        <!--For WinJS UWP apps-->
-        <file src="Microsoft.Windows.Toolkit.Notifications.Windows.targets" target="build\Windows\Microsoft.Windows.Toolkit.Notifications.targets"/>
         
     </files>
 
