Renaming binding files to .bind to avoid confusion

--- a/Microsoft.Windows.Toolkit.SampleApp/Microsoft.Windows.Toolkit.SampleApp.csproj
+++ b/Microsoft.Windows.Toolkit.SampleApp/Microsoft.Windows.Toolkit.SampleApp.csproj
@@ -141,37 +141,37 @@
     <Content Include="Icons\Layouts.png" />
     <Content Include="Icons\Notifications.png" />
     <Content Include="Icons\Services.png" />
-    <Content Include="SamplePages\Bing Service\BingCode.txt" />
+    <Content Include="SamplePages\Bing Service\BingCode.bind" />
     <Content Include="SamplePages\Bing Service\icon.png" />
     <Content Include="SamplePages\Carousel\icon.jpg" />
-    <Content Include="SamplePages\Carousel\CarouselCode.txt" />
-    <Content Include="SamplePages\Twitter Service\TwitterCode.txt" />
+    <Content Include="SamplePages\Carousel\CarouselCode.bind" />
+    <Content Include="SamplePages\Twitter Service\TwitterCode.bind" />
     <Content Include="SamplePages\Twitter Service\icon.png" />
-    <Content Include="SamplePages\Facebook Service\FacebookCode.txt" />
+    <Content Include="SamplePages\Facebook Service\FacebookCode.bind" />
     <Content Include="SamplePages\Facebook Service\icon.png" />
-    <Content Include="SamplePages\HamburgerMenu\HamburgerMenuCode.txt" />
+    <Content Include="SamplePages\HamburgerMenu\HamburgerMenuCode.bind" />
     <Content Include="SamplePages\HamburgerMenu\icon.jpg" />
-    <Content Include="SamplePages\HeaderedTextBlock\HeaderedTextBlockCode.txt" />
+    <Content Include="SamplePages\HeaderedTextBlock\HeaderedTextBlockCode.bind" />
     <Content Include="SamplePages\ImageEx\icon.jpg" />
-    <Content Include="SamplePages\ImageEx\ImageExCode.txt" />
+    <Content Include="SamplePages\ImageEx\ImageExCode.bind" />
     <Content Include="SamplePages\OffsetBehavior\offsetBehavior.gif" />
-    <Content Include="SamplePages\OffsetBehavior\OffsetBehaviorCode.txt" />
+    <Content Include="SamplePages\OffsetBehavior\OffsetBehaviorCode.bind" />
     <Content Include="SamplePages\OpacityBehavior\opacityBehavior.gif" />
-    <Content Include="SamplePages\OpacityBehavior\OpacityBehaviorCode.txt" />
+    <Content Include="SamplePages\OpacityBehavior\OpacityBehaviorCode.bind" />
     <Content Include="SamplePages\PullToRefreshListView\icon.PNG" />
-    <Content Include="SamplePages\PullToRefreshListView\PullToRefreshListViewCode.txt" />
+    <Content Include="SamplePages\PullToRefreshListView\PullToRefreshListViewCode.bind" />
     <Content Include="SamplePages\RadialGauge\icon.jpg" />
-    <Content Include="SamplePages\RadialGauge\RadialGaugeCode.txt" />
+    <Content Include="SamplePages\RadialGauge\RadialGaugeCode.bind" />
     <Content Include="SamplePages\RangeSelector\icon.jpg" />
     <Content Include="SamplePages\ResponsiveGridView\icon.jpg" />
     <Content Include="SamplePages\RotationBehavior\rotationBehavior.gif" />
-    <Content Include="SamplePages\RotationBehavior\RotationBehaviorCode.txt" />
+    <Content Include="SamplePages\RotationBehavior\RotationBehaviorCode.bind" />
     <Content Include="SamplePages\ScaleBehavior\scaleBehavior.gif" />
-    <Content Include="SamplePages\ScaleBehavior\ScaleBehaviorCode.txt" />
+    <Content Include="SamplePages\ScaleBehavior\ScaleBehaviorCode.bind" />
     <Content Include="SamplePages\SlidableListItem\icon.png" />
-    <Content Include="SamplePages\SlidableListItem\SlidableListItemCode.txt" />
+    <Content Include="SamplePages\SlidableListItem\SlidableListItemCode.bind" />
     <Content Include="SamplePages\VariableSizedGridView\icon.jpg" />
-    <Content Include="SamplePages\VariableSizedGridView\VariableSizedGridViewCode.txt" />
+    <Content Include="SamplePages\VariableSizedGridView\VariableSizedGridViewCode.bind" />
     <Content Include="Assets\Photos\Photos.json" />
     <Content Include="Assets\Photos\OnlinePhotos.json" />
     <None Include="Microsoft.Windows.Toolkit.SampleApp.ruleset" />
@@ -183,8 +183,8 @@
     <Content Include="Assets\Prettify\prettify.css" />
     <Content Include="Assets\Prettify\prettify.js" />
     <Content Include="Assets\Prettify\run_prettify.js" />
-    <Content Include="SamplePages\RangeSelector\RangeSelectorCode.txt" />
-    <Content Include="SamplePages\ResponsiveGridView\ResponsiveGridViewCode.txt" />
+    <Content Include="SamplePages\RangeSelector\RangeSelectorCode.bind" />
+    <Content Include="SamplePages\ResponsiveGridView\ResponsiveGridViewCode.bind" />
     <Content Include="SamplePages\samples.json" />
     <None Include="readme.md" />
   </ItemGroup>
