Creating Compsition Extension methods so you can easily consume in C#. Behaviours now use these extension methods too.

--- a/Microsoft.Windows.Toolkit.UI.Animations/Microsoft.Windows.Toolkit.UI.Animations.csproj
+++ b/Microsoft.Windows.Toolkit.UI.Animations/Microsoft.Windows.Toolkit.UI.Animations.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Behaviors\Opacity.cs" />
     <Compile Include="Behaviors\Rotation.cs" />
     <Compile Include="Behaviors\Scale.cs" />
+    <Compile Include="Extensions\Composition.cs" />
     <Compile Include="Extensions\Extensions.Animation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
