--- a/Microsoft.Windows.Toolkit.SampleApp/project.json
+++ b/Microsoft.Windows.Toolkit.SampleApp/project.json
@@ -3,6 +3,7 @@
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.1",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "Newtonsoft.Json": "9.0.1",
+    "NotificationsVisualizerLibrary": "1.0.1",
     "StyleCop.Analyzers": "1.0.0"
   },
   "frameworks": {
