first round of adding AnimationManager

--- a/Microsoft.Windows.Toolkit.UI.Animations/Microsoft.Windows.Toolkit.UI.Animations.csproj
+++ b/Microsoft.Windows.Toolkit.UI.Animations/Microsoft.Windows.Toolkit.UI.Animations.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Behaviors\Parallax.cs" />
     <Compile Include="Behaviors\Rotation.cs" />
     <Compile Include="Behaviors\Scale.cs" />
+    <Compile Include="Core\AnimationManager.cs" />
     <Compile Include="Extensions\AnimationHelper.cs" />
     <Compile Include="Extensions\Composition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
