--- a/Microsoft.Windows.Toolkit.Services/Microsoft.Windows.Toolkit.Services.csproj
+++ b/Microsoft.Windows.Toolkit.Services/Microsoft.Windows.Toolkit.Services.csproj
@@ -26,7 +26,7 @@
     <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>Microsoft.Windows.Toolkit.Services1.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\Microsoft.Windows.Toolkit\Microsoft.Toolkit.Uwp1.ruleset</CodeAnalysisRuleSet>
     <DocumentationFile>bin\Debug\Microsoft.Toolkit.Uwp.Services.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -38,7 +38,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Release\Microsoft.Toolkit.Uwp.Services.xml</DocumentationFile>
-    <CodeAnalysisRuleSet>Microsoft.Windows.Toolkit.Services1.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\Microsoft.Windows.Toolkit\Microsoft.Toolkit.Uwp1.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
@@ -133,7 +133,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>Microsoft.Windows.Toolkit.Services1.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\Microsoft.Windows.Toolkit\Microsoft.Toolkit.Uwp1.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug %28Anniversary Update%29|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -145,7 +145,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>Microsoft.Windows.Toolkit.Services1.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\Microsoft.Windows.Toolkit\Microsoft.Toolkit.Uwp1.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release %28Version 1511%29|AnyCPU'">
     <OutputPath>bin\Release %28Version 1511%29\</OutputPath>
@@ -157,7 +157,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>Microsoft.Windows.Toolkit.Services1.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\Microsoft.Windows.Toolkit\Microsoft.Toolkit.Uwp1.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release %28Anniversary Update%29|AnyCPU'">
     <OutputPath>bin\Release %28Anniversary Update%29\</OutputPath>
@@ -169,7 +169,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>Microsoft.Windows.Toolkit.Services1.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\Microsoft.Windows.Toolkit\Microsoft.Toolkit.Uwp1.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
