--- a/Microsoft.Windows.Toolkit.UI/Microsoft.Windows.Toolkit.UI.csproj
+++ b/Microsoft.Windows.Toolkit.UI/Microsoft.Windows.Toolkit.UI.csproj
@@ -60,9 +60,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Microsoft.Windows.Toolkit\Microsoft.Windows.Toolkit.csproj">
+    <ProjectReference Include="..\Microsoft.Toolkit.Uwp\Microsoft.Toolkit.Uwp.csproj">
       <Project>{805f80df-75c6-4c2f-8fd9-b47f6d0df5a3}</Project>
-      <Name>Microsoft.Windows.Toolkit</Name>
+      <Name>Microsoft.Toolkit.Uwp</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
